New figures. Reorganize with folders per figure.

--- a/Figure 2/Figures S2F-S2H.ipynb
+++ b/Figure 2/Figures S2F-S2H.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Figure S2F and S2G"
+    "## Figures S2F and S2G"
    ]
   },
   {
@@ -109,7 +109,7 @@
     "for s, sex in enumerate(['male', 'female']):\n",
     "    fig, axs = plt.subplots(1,5,figsize=(5*1.5,1.), dpi=150)\n",
     "    fig.subplots_adjust(wspace=0.65)\n",
-    "    fig.suptitle(f\"{sex[0].upper()}{sex[1:]}s (before stress)\", y=1.4, fontsize=8, fontweight='bold')\n",
+    "    fig.suptitle(f'{sex[0].upper()}{sex[1:]}s (before stress)', y=1.4, fontsize=8, fontweight='bold')\n",
     "    \n",
     "    axs[2].set_xlabel('Food consumed during AgRP stim. (g)')\n",
     "    axs[0].set_ylabel('AgRP preference')\n",
@@ -164,7 +164,6 @@
     "        ax.set_ylim([-1,1])\n",
     "\n",
     "        ax.set_yticks([-1,-0.5,0,0.5,1])\n",
-    "#         ax.set_xticklabels([0,0.1,0.2,0.3])\n",
     "        ax.set_yticklabels([-1,-0.5,0,0.5,1])\n",
     "\n",
     "        ax.spines['top'].set_visible(False)\n",
@@ -182,9 +181,7 @@
     "            txt = f'r = {np.round(r,2)}\\n'+fr'$\\bf{{P= {np.round(p,3)}}}$'\n",
     "        else:\n",
     "            txt = f'r = {np.round(r,2)}\\n'+f'P= {np.round(p,3)}'\n",
-    "        axs[i].annotate(txt, xy=(0.6, 0.9), xycoords='axes fraction', fontsize=8)\n",
-    "\n",
-    "    "
+    "        axs[i].annotate(txt, xy=(0.6, 0.9), xycoords='axes fraction', fontsize=8)\n"
    ]
   },
   {
@@ -298,9 +295,7 @@
     "            txt = f'r = {np.round(r,2)}\\n'+fr'$\\bf{{P= {np.round(p,3)}}}$'\n",
     "        else:\n",
     "            txt = f'r = {np.round(r,2)}\\n'+f'P= {np.round(p,3)}'\n",
-    "        axs[i].annotate(txt, xy=(0.6, 0.9), xycoords='axes fraction', fontsize=8)\n",
-    "\n",
-    "    "
+    "        axs[i].annotate(txt, xy=(0.6, 0.9), xycoords='axes fraction', fontsize=8)\n"
    ]
   },
   {
