--- a/Figure 2/Figures 2C-H and S2E.ipynb
+++ b/Figure 2/Figures 2C-H and S2E.ipynb
@@ -332,7 +332,140 @@
    "execution_count": 352,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "variances = {}\n",
+    "for sex in ['male','female']:\n",
+    "    df = data_df.query('@data_df.mouse.sex==@sex')\n",
+    "\n",
+    "    sample_n = len(df)\n",
+    "    # 10000\n",
+    "    variances[sex] = {'baseline':[], 'test':[], 'test_':[]}\n",
+    "    for n in range(10):\n",
+    "        variances[sex]['baseline'].append(df['baseline'].mean(axis=1).sample(sample_n, replace=True, random_state=n).var())\n",
+    "        variances[sex]['test'].append(df['test'].sample(sample_n, replace=True, random_state=n).var())\n",
+    "        variances[sex]['test_'].append(df['test_'].sample(sample_n, replace=True, random_state=n).var())\n",
+    "    pd.concat(variances['male']['test'], axis=1)\n",
+    "    pd.concat(variances['male']['test'], axis=1)\n",
+    "variances\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Reorganize the data\n",
+    "df = pd.concat([pd.DataFrame({'sex': data_df[('mouse', 'sex')],\n",
+    "                              'baseline': data_df['baseline'].mean(axis=1),\n",
+    "                              'test': data_df[('test', day)],\n",
+    "                              'test_': data_df[('test_', day)], \n",
+    "                              'day': day}) for day in [1,2,3,4,5]], axis=0, ignore_index=True)\n",
+    "\n",
+    "# Apply bootstrapping to estimate variance for both measurements by day and sex\n",
+    "variance_estimates = []\n",
+    "for day in df['day'].unique():\n",
+    "    for sex in ['male', 'female']:\n",
+    "        data = df[(df['day'] == day) & (df['sex'] == sex)]\n",
+    "        \n",
+    "        for n in range(10000):\n",
+    "            variance_baseline = data['baseline'].sample(data['baseline'].shape[0], replace=True, random_state=n).var()\n",
+    "            variance_test = data['test'].sample(data['test'].shape[0], replace=True, random_state=n).var()\n",
+    "            variance_test_ = data['test_'].sample(data['test_'].shape[0], replace=True, random_state=n).var()\n",
+    "\n",
+    "            variance_estimates.append((day, sex, 'baseline', variance_baseline))\n",
+    "            variance_estimates.append((day, sex, 'test', variance_test))\n",
+    "            variance_estimates.append((day, sex, 'test_', variance_test_))\n",
+    "\n",
+    "# Convert the results to a DataFrame\n",
+    "variance_df = pd.DataFrame(variance_estimates, columns=['day', 'sex', 'experiment', 'variance'])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "titles = {'baseline':'Baseline', 'test':'AgRP only', 'test_':'AgRP + stress'}\n",
+    "\n",
+    "fig, axs = plt.subplots(2,3,figsize=(8,6), dpi=150, gridspec_kw={'width_ratios':[1,5,5]})\n",
+    "fig.subplots_adjust(wspace=0.5, hspace=1)\n",
+    "for i, sex in enumerate(['male','female']):    \n",
+    "    variances, ci_dist = getVar_CI(regress_table, sex, n_shuffles=1000)\n",
+    "    l = len(regress_table[regress_table[('info_','sex')]==sex])\n",
+    "    print(f'{sex}: n= {l}')\n",
+    "    \n",
+    "    # Baseline\n",
+    "    ax = axs[i,0]\n",
+    "    n5, n95 = ci_dist.shape[0]*0.05, ci_dist.shape[0]*0.95\n",
+    "    yerr = [ci_dist.loc[n5, 'baseline'], ci_dist.loc[n95, 'baseline']]\n",
+    "    var_point = ax.errorbar(x=[0], y=variances['baseline'].to_numpy(), yerr=yerr, clip_on=False, color=aux.color(sex), ecolor=aux.color(sex),\n",
+    "                            marker='_', markersize=10, markeredgewidth=2, elinewidth=2)\n",
+    "    ax.set_xticks([0])\n",
+    "    ax.set_xticklabels([0], fontsize=14)\n",
+    "    ax.set_title('Baseline', y=1.2)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "titles = {'baseline':'Baseline', 'test':'AgRP only', 'test_':'AgRP + stress'}\n",
+    "\n",
+    "fig, axs = plt.subplots(2,3,figsize=(8,6), dpi=150, gridspec_kw={'width_ratios':[1,5,5]})\n",
+    "fig.subplots_adjust(wspace=0.5, hspace=1)\n",
+    "for i, sex in enumerate(['male','female']):    \n",
+    "    variances, ci_dist = getVar_CI(regress_table, sex, n_shuffles=1000)\n",
+    "    l = len(regress_table[regress_table[('info_','sex')]==sex])\n",
+    "    print(f'{sex}: n= {l}')\n",
+    "    \n",
+    "    # Baseline\n",
+    "    ax = axs[i,0]\n",
+    "    n5, n95 = ci_dist.shape[0]*0.05, ci_dist.shape[0]*0.95\n",
+    "    yerr = [ci_dist.loc[n5, 'baseline'], ci_dist.loc[n95, 'baseline']]\n",
+    "    var_point = ax.errorbar(x=[0], y=variances['baseline'].to_numpy(), yerr=yerr, clip_on=False, color=aux.color(sex), ecolor=aux.color(sex),\n",
+    "                            marker='_', markersize=10, markeredgewidth=2, elinewidth=2)\n",
+    "    ax.set_xticks([0])\n",
+    "    ax.set_xticklabels([0], fontsize=14);\n",
+    "    ax.set_title('Baseline', y=1.2)\n",
+    "    \n",
+    "    # AgRP only\n",
+    "    ax = axs[i,1]\n",
+    "#     n5, n95 = ci_dist.shape[0]*0.05, ci_dist.shape[0]*0.95\n",
+    "    ci = ci_dist.quantile([0.05, 0.95])\n",
+    "\n",
+    "    var_line, = ax.plot(np.arange(5), variances['test'], color=aux.color(sex), clip_on=False, linewidth=2, label=f'Mean ({sex}s)')\n",
+    "    ci_shade = ax.fill_between(np.arange(5), ci.loc[0.05, 'test'], ci.loc[0.95, 'test'],\n",
+    "                               facecolor=aux.color(sex), linewidth=0, alpha=0.2, clip_on=False, label=f'95% CI ({sex}s)')\n",
+    "    ax.set_xticks(np.arange(5))\n",
+    "    ax.set_xticklabels(np.arange(5)+1, fontsize=14);\n",
+    "    ax.set_title('AgRP only', y=1.2)\n",
+    "    \n",
+    "    # AgRP + Stress\n",
+    "    ax = axs[i,2]\n",
+    "    n5, n95 = ci_dist.shape[0]*0.05, ci_dist.shape[0]*0.95\n",
+    "    print(n5)\n",
+    "#     n5, n95 = np.quantile(ci_dist.to_numpy().flatten(), [0.05,0.95])\n",
+    "    var_line, = ax.plot(np.arange(5), variances['test_'], color=aux.color(sex), clip_on=False, linewidth=2)\n",
+    "    ci_shade = ax.fill_between(np.arange(5), ci_dist.loc[n5, 'test_'], ci_dist.loc[n95, 'test_'],\n",
+    "                               facecolor=aux.color(sex), linewidth=0, alpha=0.2, clip_on=False)\n",
+    "    ax.set_xticks(np.arange(5))\n",
+    "    ax.set_xticklabels(np.arange(5)+1, fontsize=14);\n",
+    "    ax.set_title('AgRP + Stress', y=1.2)\n",
+    "    \n",
+    "    for ax in axs.ravel():\n",
+    "        ax.set_ylabel('Variance of preference', fontsize=14)\n",
+    "        ax.set_xlabel('Days', fontsize=14)\n",
+    "        ax.xaxis.set_label_coords(0.5, -0.3)\n",
+    "\n",
+    "        ax.set_yticks(np.arange(0,0.51,0.25))\n",
+    "        ax.set_yticklabels(np.round(np.arange(0,0.51,0.25),2), fontsize=14)\n",
+    "        ax.set_ylim([0,0.5])\n",
+    "        # ax.set_xbound(-1)\n",
+    "\n",
+    "        ax.spines['right'].set_visible(False)\n",
+    "        ax.spines['top'].set_visible(False)\n",
+    "        ax.spines['left'].set_linewidth(1.5)\n",
+    "        ax.spines['bottom'].set_linewidth(1.5)\n",
+    "\n",
+    "        ax.xaxis.set_tick_params(width=1.5)\n",
+    "        ax.yaxis.set_tick_params(width=1.5)"
+   ]
   },
   {
    "cell_type": "markdown",
