--- a/Figure 3/Figures 3A-C and S3B-E.ipynb
+++ b/Figure 3/Figures 3A-C and S3B-E.ipynb
@@ -40,8 +40,9 @@
    "outputs": [],
    "source": [
     "# Additional imports and setting up the plots\n",
-    "from scipy.stats import pearsonr, linregress\n",
-    "from statsmodels.stats.multitest import multipletests\n",
+    "import json\n",
+    "from tqdm import tqdm\n",
+    "from PIL import Image\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
