--- a/Figure 1/Figures 1C.ipynb
+++ b/Figure 1/Figures 1C.ipynb
@@ -37,8 +37,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = basedir/'Kucukdereli_atal_data/raw_behavior_data_females.h5'\n",
+    "data_path = basedir/'Kucukdereli_atal_data/raw_behavior_data_males.h5'\n",
+    "male_data = pd.read_hdf(data_path, key='data')\n",
     "\n",
+    "data_path = basedir/'Kucukdereli_atal_data/raw_behavior_data_females.h5'\n",
     "female_data = pd.read_hdf(data_path, key='data')\n"
    ]
   },
@@ -259,6 +261,13 @@
     "\n",
     "colors = {'gray':'#D4D4D4', 'darkgray':'#545454', \n",
     "          'dwell':'#FF5E74', 'explore':'#00B7FF', 'transition':'#D4D4D4'}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pick an example mouse and plot the speed trace"
    ]
   },
   {
