--- a/Figure 1/Figures 1C.ipynb
+++ b/Figure 1/Figures 1C.ipynb
@@ -37,6 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data for male or female mide can be load as follows\n",
     "data_path = basedir/'Kucukdereli_atal_data/raw_behavior_data_males.h5'\n",
     "male_data = pd.read_hdf(data_path, key='data')\n",
     "\n",
